# ViOn

./: .gitignore  Architecture.drawio  CMakeLists.txt  ChangeApplier.h  EditorArchitecture.drawio  FileController.drawio  Parser.cpp  Parser.h  README.md  TextManager.h  TextUpDater.h  example.cpp  main.cpp  uml_server_client
Client/: CLient.cpp  CLient.h  CMakeLists.txt
Client/include/: CLient.h  Client.h  ClientEditor.h  Parser.h
Client/src/: CLient.cpp  Client.cpp  ClientEditor.cpp  Parser.cpp  main.cpp
FileController/: Architecture.drawio  CMakeLists.txt
FileController/include/FileController/: ChangeApplier.h  EventManager.h  FileStorage.h  JsonParser.h  JsonParser.hpp  Message.hpp  Parser.h  Position.h  Position.hpp  TextManager.h  TextUpDater.h
FileController/src/: ChangeApplier.cpp  FileStorage.cpp  Handler.cpp  JsonParser.cpp  Parser.cpp  TextManager.cpp  TextUpDater.cpp
FileController/test/: TextManager.cpp
Parser/: CMakeLists.txt
Server/: CMakeLists.txt  Server.cpp  Server.h
Server/include/: EventManager.h  Parser.h  Server.h  ServerImpl.h  handler.h
Server/src/: EventManager.cpp  Parser.cpp  Server.cpp  ServerImpl.cpp  handler.cpp  main.cpp
Server/tests/: CMakeLists.txt  test.cpp
Socket/: Socket.cpp  Socket.h
Socket/include/: Exceptions.h  Socket.h
Socket/src/: Socket.cpp
TextEditor/: CMakeLists.txt  README.md
TextEditor/include/TextEditor/: Cursor.h  Interpretator.h  Interpretator.hpp  NCursesView.h  View.h
TextEditor/src/: Cursor.cpp  TextEditor.cpp
TextEditor/tests/: tests.cpp
ViOn/: CMakeLists.txt
ViOn/includes/: ChangeCreator.h  interpretator.h  message.h  parser.h
ViOn/tests/: tests.cpp
ViOnClient/: CMakeLists.txt
ViOnClient/Client/: CMakeLists.txt
ViOnClient/Client/include/: ClientEditor.h
ViOnClient/Client/tests/: CMakeLists.txt  test.cpp
ViOnClient/TextEditor/: CMakeLists.txt
ViOnClient/TextEditor/include/TextEditor/: ChangeCreator.h  Client.h  ClientEditor.h  ClientEditorImpl.h  Cursor.h  Direction.h  Interpretator.h  NCursesView.h  Parser.h  Symbol.h  Text.h  View.h
ViOnClient/TextEditor/src/: ChangeCreator.cpp  Client.cpp  ClientEditor.cpp  ClientEditorImpl.cpp  Cursor.cpp  Interpretator.cpp  NCursesView.cpp  Parser.cpp  Text.cpp  TextEditor.cpp  View.cpp  main.cpp
ViOnClient/include/: ClientEditor.h
ViOnClient/src/: ClientEditor.cpp  main.cpp
ViOnServer/: CMakeLists.txt
ViOnServer/Server/: CMakeLists.txt  CMakeLists.txt.in
ViOnServer/Server/include/: EventManager.h  FileIds.h  ServerImpl.h
ViOnServer/Server/src/: FileIds.cpp  ServerImpl.cpp
ViOnServer/Server/tests/: CMakeLists.txt
ViOnServer/src/: Server.cpp  main.cpp
ViOn_lib/FileController/: CMakeLists.txt
ViOn_lib/FileController/include/FileController/: ChangeApplier.h  FileStorage.h  Handler.h  Message.h  TextManager.h  TextUpDater.h
ViOn_lib/FileController/src/: ChangeApplier.cpp
ViOn_lib/FileController/test/: CMakeLists.txt  EventManager.cpp  main.cpp
googletest-download/: CMakeLists.txt
include/: Server.h
include/Client/: Client.h  ClientEditor.h
include/FileController/: ChangeApplier.h  EventManager.h  FileStorage.h  Handler.h  JsonParser.h  Message.h  Parser.h  Position.h  TextManager.h  TextUpDater.h
include/Server/: EventManager.h  ServerImpl.h
include/Socket/: Exceptions.h  Socket.h
include/TextEditor/: Change.h  ChangeCreator.h  Client.h  Interpretator.h  Listener.h  LoginStruct.h  Message.h  Mode.h  Position.h  StartInterface.h  Symbol.h  Text.h  TextEditor.h  TextStorage.h  View.h
includes/: ChangeCreator.h  ChangeCreator.hpp  Interpretator.h  Interpretator.hpp  JsonParser.h  JsonParser.hpp  Message.h  Message.hpp  Mode.hpp  Parser.h  Position.h  Position.hpp
nonlib-include/: Cursor.h  NCursesView.h
nonlib-src/: Cursor.cpp  NCursesView.cpp
source/: ChangeCreator.cpp  Interpretator.cpp  JsonParser.cpp  Parser.cpp  main.cpp
src/: ChangeApplier.cpp  ChangeCreator.cpp  Client.cpp  Client.h  EventManager.cpp  Handler.cpp  Interpretator.cpp  Listener.cpp  Parser.cpp  Server.cpp  StartInterface.cpp  Text.cpp  TextEditor.cpp  TextManager.cpp  TextUpDater.cpp  View.cpp  main.cpp
src/FileController/: ChangeApplier.cpp  FileStorage.cpp  Handler.cpp  JsonParser.cpp  Parser.cpp  TextManager.cpp  TextUpDater.cpp
src/Server/: EventManager.cpp  ServerImpl.cpp
src/Socket/: Socket.cpp
test/: CMakeLists.txt  ChangeApplier.cpp  Listener.cpp  StartInterface.cpp  TextEditor.cpp  TextManager.cpp  TextUpDater.cpp  View.cpp  tests.cpp
tests/: tests.cpp
